# filtertree

./: .gitignore  README.md  pyproject.toml
filtertree/: __init__.py  cli.py
