[tool.poetry]
name = "filtertree"
version = "0.1.0"
description = "Filter directory tree"
authors = ["takatoh <takatoh.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
filtre="filtertree.cli:main"
