[tool.poetry]
name = "filtertree"
version = "0.1.0"
description = "Apply a filter to the directory tree"
authors = ["takatoh <takatoh.m@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
filtre="filtertree.cli:main"
